<resources>
    <string name="app_name">Stella</string>
    <string name="action_settings">Settings</string>
    <string name="title">Stella - Interactive Travel Guide</string>
    <string name="hint_search">Searching for…</string>
    <string name="search_description">City, Cities</string>
    <string name="s_by">Searching by: </string>
    <string name="opening_text">TELL ME WHERE ?</string>
    <string name="own">Own The Adventure</string>
    <string name="take_v">YOU\'VE DREAMT ABOUT IT</string>
    <string name="real">Let Me Help Your Decision</string>
    <string name="ribs">I WILL FIND GREAT A RIBS PLACE</string>
    <string name="ribs2">At Your Destination</string>
    <string name="events">CURIOUS ABOUT EVENTS ?</string>
    <string name="dest">I Can Help Too</string>
    <string name="s_button">Press to Say City</string>
    <string name="locs">Location: </string>
    <string name="locs_here">Location</string>
    <string name="radius">Radius: </string>
    <string name="rad_miles">Radius in miles</string>
    <string name="string">Query Type</string>
    <string name="tour">Here are some Tourist attractions</string>
</resources>
